force-app/main/default/objects/Risk_Calculation__c/Risk_Calculation__c.object-meta.xml
<CustomObject>
    <label>Risk Calculation</label>
    <nameField>
        <label>Risk Calculation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risk Calculations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>