force-app/main/default/objects/Risk_Calculation__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Risk Calculations</relationshipLabel>
    <relationshipName>Risk_Calculations</relationshipName>
    <type>Lookup</type>
</CustomField>