force-app/main/default/objects/Risk_Calculation__c/fields/Field_3__c.field-meta.xml
<CustomField>
    <fullName>Field_3__c</fullName>
    <label>Field 3</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>